--- a/package.json
+++ b/package.json
@@ -1,41 +1,37 @@
 {
-  "name": "dimples-websocket",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "name": "tryhard-websocket",
+  "version": "0.1.0",
+  "description": "Custom RxWebSocket Implementation",
+  "main": "src/index.js",
   "scripts": {
     "review": "node_modules/.bin/standard --fix",
-    "test": "babel-tape-runner test/*.js | faucet"
+    "test": "babel-tape-runner test/*.js | faucet",
+    "test-debug": "babel-tape-runner test/*.js"
   },
   "author": "Brian Bland",
   "license": "ISC",
   "devDependencies": {
     "babel": "^6.5.2",
-    "babel-cli": "^6.3.17",
-    "babel-core": "^6.3.17",
-    "babel-loader": "^6.2.0",
-    "babel-preset-es2015-loose": "^6.1.3",
-    "babel-preset-stage-0": "^6.3.13",
-    "babel-runtime": "^6.11.6",
+    "babel-cli": "^6.22.2",
+    "babel-core": "^6.22.1",
+    "babel-loader": "^6.2.10",
+    "babel-preset-latest": "^6.22.0",
+    "babel-runtime": "^6.22.0",
     "babel-tape-runner": "^2.0.1",
     "faucet": "0.0.1",
     "mock-socket": "^5.0.1",
-    "sinon": "^1.17.5",
-    "standard": "^7.1.2",
+    "sinon": "^1.17.7",
+    "standard": "^8.6.0",
     "style-loader": "^0.13.1",
-    "tape": "^4.6.0",
-    "tape-promise": "^1.1.0"
+    "tape": "^4.6.3",
+    "tape-promise": "^2.0.1"
   },
   "dependencies": {
-    "rxjs": "^5.0.0-beta.12",
-    "rxjs-es": "^5.0.0-beta.12",
-    "systemjs": "^0.19.37"
+    "rxjs": "^5.0.0-beta.12"
   },
   "standard": {
     "ignore": [
-      "dist/**",
-      "node_modules/**",
-      "cast_sender.js"
+      "node_modules/**"
     ]
   }
 }
